overlay/staging/echo-app-cicd/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: go-echo
spec:
  hosts:
    - go-echo-staging.apps.kowlon.my.id
    - go-echo
  gateways:
    - apps
  http:
    - match: 
        - uri:
            prefix: /  
      route:
        - destination:
            port:
              number: 80
            host: go-echo
